<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frmRegister">

    <Button
        android:id="@+id/btncreateaccount"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:background="@color/btncolor"
        android:text="@string/regsubmit"
        android:textAllCaps="false"
        android:textColor="@color/backgroundcolor"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/lblsignup" />

    <EditText
        android:id="@+id/txtnic"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/regnic"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <EditText
        android:id="@+id/txtpwd"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/regpwd"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.665" />

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/regemail"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <EditText
        android:id="@+id/txtcpwd"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/regcpwd"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <EditText
        android:id="@+id/txtcontact"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/regcontact"
        android:inputType="number"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <EditText
        android:id="@+id/txtaddress"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/regadd"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <EditText
        android:id="@+id/txtname"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/regname"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.196" />


</androidx.constraintlayout.widget.ConstraintLayout>