<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".frmVerifying">

    <ImageView
        android:id="@+id/imageViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        app:srcCompat="@drawable/lblsignup" />

    <EditText
        android:id="@+id/txtcpwd2"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/regcpwd"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/txttimer"
        android:layout_width="95dp"
        android:layout_height="41dp"
        android:textAllCaps="false"
        android:textColor="@color/btncolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/txttimerremaning"
        android:layout_width="131dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <EditText
        android:id="@+id/txtpwd2"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/regpwd"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491" />

    <Button
        android:id="@+id/btncreateaccount2"
        android:layout_width="194dp"
        android:layout_height="42dp"
        android:background="@color/btncolor"
        android:text="@string/regsubmit"
        android:textAllCaps="false"
        android:textColor="@color/backgroundcolor"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <EditText
        android:id="@+id/txtemail2"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/regemail"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <EditText
        android:id="@+id/txtverifykey"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/keycode"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <TextView
        android:id="@+id/tvnotify"
        android:layout_width="307dp"
        android:layout_height="60dp"
        android:text="please check your email and enter the activation code to proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/btnverify"
        android:layout_width="194dp"
        android:layout_height="42dp"
        android:background="@color/btncolor"
        android:text="@string/btnverify"
        android:textAllCaps="false"
        android:textColor="@color/backgroundcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <ProgressBar
        android:id="@+id/progressverfy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminateTint="@color/btncolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828" />


</androidx.constraintlayout.widget.ConstraintLayout>