<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <ProgressBar
        android:id="@+id/mainprogressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminateTint="@color/btncolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="262dp"
        android:layout_height="146dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/firefly" />

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/tv_uername"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textCursorDrawable="@color/darkblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <EditText
        android:id="@+id/txtpwd"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:autoText="false"
        android:background="@drawable/rec"
        android:ems="10"
        android:hint="@string/tv_pwd"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.487" />

    <Button
        android:id="@+id/tvsignup"
        android:layout_width="245dp"
        android:layout_height="48dp"
        android:background="@color/actionbar"
        android:saveEnabled="false"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="@color/btncolor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googltBtn"
        android:layout_width="255dp"
        android:layout_height="60dp"
        android:gravity="center_vertical|center"
        android:textAlignment="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922"></com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="245dp"
        android:layout_height="48dp"
        android:background="@color/btncolor"
        android:saveEnabled="false"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/backgroundcolor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <TextView
        android:id="@+id/tvsignup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gethelp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="Forgot password?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />


</androidx.constraintlayout.widget.ConstraintLayout>